# cgen

./: .clang-format  .gitignore  LICENSE  Makefile  README.md
src/: Makefile  cgen-c.opam  cgen.opam  cgen.opam.template  dune-project
src/lib/: README.md  allen_interval_algebra.ml  bitset.ml  bitset.mli  bitset_intf.ml  bv.ml  bv_interval.ml  bv_interval.mli  cdoms.ml  context.ml  context.mli  context_intf.ml  context_virtual_intf.ml  dense_intf.ml  dict.ml  dict.mli  dominance.ml  dune  expression.ml  expression.mli  fixpoint.ml  fixpoint.mli  float32.ml  float32.mli  float32_stubs.c  float_stubs.c  ftree.ml  ftree.mli  hashmap.ml  hashmap_intf.ml  interval_tree.ml  interval_tree_intf.ml  isel_internal.ml  isel_rewrite.ml  isel_rewrite.mli  label.ml  label.mli  last_stores.ml  lexer.mll  linkage.ml  (+54 more)
src/lib/cgen/: bv.ml  bv_interval.ml  bv_interval.mli  context_intf.ml  dict.ml  dict.mli  dune  fixpoint.ml  fixpoint.mli  float32.mli  isel_internal.ml  isel_rewrite.ml  isel_rewrite.mli  label.ml  label.mli  last_stores.ml  layout.ml  layout.mli  linkage.ml  linkage.mli  live_intf.ml  loops.ml  loops_intf.ml  machine_intf.ml  machine_regvar.ml  machine_regvar.mli  magic_div.ml  magic_div.mli  matcher.ml  matcher.mli  parse_intf.ml  phi_values.ml  reducibility.mli  resolver_intf.ml  scalars.ml  scalars_common.ml  semi_nca.ml  semi_nca.mli  slot_initialization.ml  sm.ml  (+17 more)
src/lib/cgen-c/: attr.ml  attr.mli  builtins.ml  builtins.mli  c_lexer.mll  c_parser.mly  cunit.ml  cunit.mli  data_model.ml  data_model.mli  decl.ml  decl.mli  dune  eval.ml  eval.mli  expr.ml  expr.mli  layout.ml  layout.mli  lexer_hack.ml  parse.ml  parse.mli  parse_state.ml  predef.ml  predef.mli  stmt.ml  stmt.mli  tcunit.ml  tcunit.mli  tdecl.ml  tdecl.mli  texpr.ml  texpr.mli  tstmt.ml  tstmt.mli  tydecl.ml  tydecl.mli  type.ml  type.mli  type_env.ml  (+1 more)
src/lib/cgen-c/elab/: elab.ml  elab.mli  elab_common.ml  elab_conv.ml  elab_ctx.ml  elab_decl.ml  elab_expr.ml  elab_init.ml  elab_stmt.ml  elab_type.ml
src/lib/cgen-c/lower/: lower.ml  lower.mli  lower_expr.ml  lower_stmt.ml  (+1 more)
src/lib/cgen-containers/: bitset.ml  bitset.mli  champ.ml  champ.mli  champ_intf.ml  dense.ml  dense.mli  dune  ftree.ml  ftree.mli  hashmap.ml  hashmap.mli  hdict.ml  hdict.mli  hdict_intf.ml  hdict_key.ml  interval_tree.ml  interval_tree.mli  interval_tree_intf.ml  patricia_tree.ml  patricia_tree.mli  patricia_tree_intf.ml  rrb.ml  rrb.mli  small_map.ml  small_map.mli  small_map_intf.ml  vec.ml  vec.mli
src/lib/cgen-ppx/: cgen_ppx_rule.ml  dune
src/lib/cgen-utils/: allen_point_algebra.ml  bv.ml  bv.mli  bv_interval.ml  c_data_model.ml  c_data_model.mli  diagnostic.ml  diagnostic.mli  dune  location.ml  location.mli  monads.ml  process.ml  process.mli  regular.ml  sm.ml  source_map.ml  source_map.mli
src/lib/context/: context.ml  context.mli  context_common.ml  context_label.ml  context_local.ml  context_local_intf.ml  context_machine.ml  context_machine_intf.ml  context_var.ml  context_virtual.ml  context_virtual_abi.ml  context_virtual_intf.ml  context_virtual_module.ml  machine_intf.ml
src/lib/egraph/: builder.ml  common.ml  egraph.ml  egraph.mli  egraph_builder.ml  egraph_common.ml  egraph_id.ml  egraph_input.ml  egraph_node.ml  egraph_rewrite.ml  egraph_rule.ml  egraph_sched.ml  egraph_uf.ml  enode.ml  exp.ml  extractor.ml  id.ml  id.mli  input.ml  lifter.ml  parser.ml  prov.ml  rewrite.ml  rule.ml  scheduler.ml  subst.ml  uf.ml  uf.mli  util.ml
src/lib/expression/: builder.ml  common.ml  eval.ml  expression.ml  expression.mli  free_vars.ml  labels.ml  reify.ml  subst.ml  updater.ml
src/lib/isel/: isel.ml  isel.mli  isel_builder.ml  isel_common.ml  isel_match.ml  isel_pattern.ml
src/lib/machine/: machine.ml  machine.mli  machine_regvar.ml  regvar.ml
src/lib/passes/: abi_loadopt.ml  abi_loadopt.mli  early_abi.ml  early_abi.mli  lower_abi.ml  lower_abi.mli  merge_straightline_blks.ml  merge_straightline_blks.mli  passes.ml  passes.mli  peephole.ml  peephole.mli  prop_consts.ml  prop_consts.mli  remove_dead_vars.ml  remove_dead_vars.mli  remove_disjoint_blks.ml  remove_disjoint_blks.mli  remove_unreachable_blks.ml  remove_unreachable_blks.mli  resolve_constant_blk_args.ml  resolve_constant_blk_args.mli  scalars_common.ml  sccp.ml  sccp.mli  simplify_cfg.ml  simplify_cfg.mli  sroa_coalesce_common.ml  ssa.ml  ssa.mli  tailcall.ml  tailcall.mli
src/lib/pseudo/: pseudo.ml  pseudo.mli  pseudo_blk.ml  pseudo_cfg.ml  pseudo_emit.ml  pseudo_func.ml  pseudo_insn.ml  pseudo_live.ml  pseudo_module.ml  pseudo_remove_dead_insns.ml  pseudo_select.ml
src/lib/pseudo_passes/: pseudo_emit.ml  pseudo_live.ml  pseudo_passes.ml  pseudo_passes.mli  pseudo_remove_dead_insns.ml
src/lib/regalloc/: regalloc.ml  regalloc.mli  regalloc_irc.ml  regalloc_irc_state.ml  regalloc_regs.ml  regalloc_stack_layout.ml
src/lib/structured/: structured.ml  structured.mli  structured_common.ml  structured_destructure.ml  structured_func.ml  structured_module.ml  structured_restructure.ml  structured_stmt.ml
src/lib/typecheck/: typecheck.ml  typecheck.mli  typecheck_common.ml  typecheck_ctrls.ml  typecheck_env.ml  typecheck_funcs.ml  typecheck_insns.ml  typecheck_types.ml
src/lib/virtual/: blk.ml  blk_intf.ml  cfg.ml  common.ml  ctrl.ml  ctrl_intf.ml  data.ml  edge.ml  eval.ml  func.ml  func_intf.ml  insn.ml  insn_intf.ml  intervals.ml  live.ml  loops.ml  module.ml  slot.ml  virtual.ml  virtual.mli  virtual_blk.ml  virtual_blk_intf.ml  virtual_cfg.ml  virtual_common.ml  virtual_ctrl.ml  virtual_ctrl_intf.ml  virtual_data.ml  virtual_eval.ml  virtual_eval_intf.ml  virtual_func.ml  virtual_func_intf.ml  virtual_insn.ml  virtual_insn_intf.ml  virtual_live.ml  virtual_live_impl.ml  virtual_loops.ml  virtual_module.ml  virtual_resolver.ml  virtual_resolver_impl.ml  virtual_slot.ml  (+2 more)
src/test/: dune  golden.ml  native.ml  process.ml  test_allen.ml  test_bitset.ml  test_bv_interval.ml  test_c.ml  test_champ.ml  test_dense.ml  test_float32.ml  test_ftree.ml  test_hdict.ml  test_magic_div.ml  test_opt.ml  test_rrb.ml  test_small_map.ml  test_type.ml
(+1183 files in other folders)
