(lang dune 3.15)

(name cgen)

(version 0.1)

(using menhir 3.0)

(generate_opam_files true)

(source
 (github bmourad01/cgen))

(license "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception")

(authors "Benjamin Mourad")

(maintainers "Benjamin_Mourad@student.uml.edu")

(package
 (name cgen)
 (synopsis "A compiler backend")
 (description "A library and suite of tools for generating native code")
 (depends
  (ocaml
   (>= 5.3.0))
  cmdliner
  (core
   (>= v0.17))
  (core_kernel
   (>= v0.17))
  (core_unix
   (>= v0.17))
  dune
  fmt
  logs
  menhir
  ocamldiff
  ounit2
  ppx_bin_prot
  ppx_compare
  ppx_fields_conv
  ppx_sexp_conv
  (ppxlib
   (>= 0.36.0))
  shexp
  zarith))

(package
 (name cgen-c)
 (synopsis "C frontend for cgen")
 (description "A C frontend for cgen")
 (depends cgen))
