(include_subdirs qualified)

(ocamllex virtual_lexer)

(menhir
 (modules virtual_parser)
 (flags --explain))

(library
 (name cgen)
 (public_name cgen)
 (preprocess
  (pps ppx_bin_prot ppx_compare ppx_hash ppx_sexp_conv))
 (libraries
  bitvec
  bitvec-binprot
  bitvec-order
  bitvec-sexp
  core
  core_kernel.pairing_heap
  core_kernel.uopt
  graphlib
  monads
  regular
  zarith)
 (private_modules
  cdoms
  ftree
  hashmap
  hashmap_intf
  last_stores
  live_intf
  phi_values
  resolver_intf
  sm
  subst_mapper
  tags
  var_internal
  virtual_lexer
  virtual_parser)
 (foreign_stubs
  (language c)
  (names float_stubs))
 (ocamlopt_flags -O2))
