(test
 (name test_opt)
 (libraries cgen golden ocamldiff ounit2 process)
 (modules test_opt)
 (ocamlopt_flags -O2)
 (deps
  (glob_files_rec data/*)))

(test
 (name test_allen)
 (libraries cgen ounit2)
 (modules test_allen)
 (ocamlopt_flags -O2))

(test
 (name test_type)
 (libraries cgen ounit2)
 (modules test_type)
 (ocamlopt_flags -O2))

(library
 (name test_float32)
 (modules test_float32)
 (libraries cgen)
 (ocamlopt_flags -O2)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_bv_interval)
 (modules test_bv_interval)
 (libraries cgen)
 (ocamlopt_flags -O2)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_bitset)
 (modules test_bitset)
 (libraries cgen)
 (ocamlopt_flags -O2)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name golden)
 (libraries core core_unix core_unix.filename_unix ocamldiff)
 (modules golden)
 (ocamlopt_flags -O2))

(library
 (name process)
 (libraries core shexp.process)
 (modules process)
 (ocamlopt_flags -O2))
