(env
 (release
  (inline_tests enabled)))

(test
 (name test_opt)
 (libraries cgen golden ocamldiff ounit2 native)
 (modules test_opt)
 (ocamlopt_flags -O3)
 (deps
  (glob_files_rec data/*)))

(test
 (name test_c)
 (libraries cgen-c cgen.utils cgen golden ounit2 native)
 (modules test_c)
 (ocamlopt_flags -O3)
 (deps
  (glob_files_rec data/c/*)))

(library
 (name native)
 (libraries cgen cgen.utils golden ounit2 shexp.process)
 (modules native)
 (ocamlopt_flags -O3))

(library
 (name test_type)
 (libraries cgen)
 (modules test_type)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_allen)
 (libraries cgen cgen.utils)
 (modules test_allen)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_float32)
 (modules test_float32)
 (libraries cgen)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_bv_interval)
 (modules test_bv_interval)
 (libraries cgen)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_bitset)
 (modules test_bitset)
 (libraries cgen)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_dense)
 (modules test_dense)
 (libraries cgen)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_rrb)
 (modules test_rrb)
 (libraries cgen)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_champ)
 (modules test_champ)
 (libraries cgen)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name test_magic_div)
 (modules test_magic_div)
 (libraries cgen zarith)
 (ocamlopt_flags -O3)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(library
 (name golden)
 (libraries core core_unix core_unix.filename_unix ocamldiff)
 (modules golden)
 (ocamlopt_flags -O3))
