(include_subdirs qualified)

(ocamllex virtual_lexer structured_lexer)

(menhir
 (modules virtual_parser structured_parser)
 (explain true))

(library
 (name cgen)
 (public_name cgen)
 (preprocess
  (pps ppx_bin_prot ppx_compare ppx_fields_conv ppx_hash ppx_sexp_conv
    cgen.ppx_rule))
 (libraries
  cgen.containers
  cgen.utils
  core
  core_kernel.pairing_heap
  core_kernel.uopt
  logs
  zarith)
 (private_modules
  context_virtual_intf
  dominance
  isel_internal
  last_stores
  live_intf
  loops
  loops_intf
  matcher
  phi_values
  resolver_intf
  scalars
  scalars_common
  slot_initialization
  structured_lexer
  structured_parser
  subst_mapper
  subst_mapper_abi
  tags
  tailcall
  virtual_lexer
  virtual_parser
  windmill)
 (ocamlopt_flags -O3))
